build: update MAVEN_OPTS for enhanced module exports and opens (#7035)